# electra

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .flake8  Dockerfile  README.md  pyproject.toml  requirements.txt  run_server.py
backend/app/: main.py
backend/app/apis/: admin_api.py  admin_api_base.py  analysis_api.py  analysis_api_base.py  elect_api.py  elect_api_base.py  general_api.py  general_api_base.py  global_api.py  global_api_base.py  wahlkreis_api.py  wahlkreis_api_base.py
backend/app/database/: base.py  connection.py  models.py
backend/app/models/: abgeordneter.py  auslaenderanteil.py  authenticated_response.py  berufsgruppen.py  bundesland.py  closest_winner.py  closest_winners.py  direktkandidaten.py  einkommen.py  overview_wahlkreis.py  seat_distribution.py  seat_distribution_distribution_inner.py  stimmanteil.py  ueberhang.py  ueberhang_bundesland.py  vote_request.py  wahlkreis.py  wahlzettel_partei_wrapper.py  wahlzettel_parteien.py  winning_parties.py  winning_parties_erststimme_inner.py  winning_parties_zweitstimme_inner.py
backend/database-tools/: grant-select-all-tables.txt
backend/database-tools/scripts/: Create states and elections  parseCandidates.py  parseDirectVotes.py  parseDirectcandidacies.py  parseListCandidacies.py  parseListVotes.py  parseParties.py  parseStructuralData.py  parseWahlkreise.py  setup_database.py
backend/database-tools/sitzverteilung/: define-materialized-views.sql  define-views.sql  functions.sql  hoechstzahl.sql  refresh-materialized-views.sql  sitzverteilung-functions.sql  sitzverteilung-views.sql
backend/database-tools/topTen/: closestWinners.sql  mat-view.sql
backend/src/app/: .gitignore  README.md  openapi.yaml  setup.cfg
(+330 files in other folders)
