[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "greenlet==3.1.1",
    "numpy==2.1.3",
    "openapi>=2.0.0",
    "pandas==2.2.3",
    "psycopg2==2.9.10",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "six==1.16.0",
    "sqlalchemy==2.0.36",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "uvicorn>=0.34.0",
]
