[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Backend server for the election system"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "aiofiles==23.1.0",
    "aniso8601==7.0.0",
    "async-exit-stack==1.0.1",
    "async-generator==1.10",
    "fastapi[all]>=0.115.6",
    "greenlet==3.1.1",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "psycopg2==2.9.10",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pytz==2024.2",
    "sqlalchemy==2.0.36",
    "typing-extensions==4.12.2",
    "uvicorn>=0.34.0",
]

[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = [
    '.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox',
    '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv',
]
skip_gitignore = true
